--- a/BTL/AN_QUAY_DI/Quay.html
+++ b/BTL/AN_QUAY_DI/Quay.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kenh14 </title>
-    <link rel="stylesheet" href="/BTL/CSS_1/style.css">
-    <script src="/BTL/Scrip.js/script.js"></script>
+    <link rel="stylesheet" href="../CSS_1/style.css">
+    <script src="../Scrip.js/script.js"></script>
     <!-- Thêm liên kết Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="shortcut icon" href="https://kenh14cdn.com/web_images/kenh14-favicon.ico" type="image/x-icon">
-    <!-- Linking SwiperJS CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <!-- Linking SwiperJS script -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+        <!-- Linking SwiperJS CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+        <!-- Linking SwiperJS script -->
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </head>
 <body>
     <header>
@@ -37,19 +37,19 @@
     <div class="body">
         <div class="one">
             <section>
-                <a href="#"><img src="/BTL/images/logo_k14anquaydi.svg" width="150px"></a>
+                <a href="#"><img src="../images/logo_k14anquaydi.svg" width="150px"></a>
             </section>
             <aside>
-                <a href="An.html"><img src="/BTL/images/logoAn.png" width="120px"></a>
-                <a href="Quay.html"><img src="/BTL/images/logoQuay.png"width="120px"></a>
-                <a href="Di.html"><img src="/BTL/images/logoDi.png"width="120px"></a>
+                <a href="An.html"><img src="../images/logoAn.png" width="120px"></a>
+                <a href="Quay.html"><img src="../images/logoQuay.png"width="120px"></a>
+                <a href="Di.html"><img src="../images/logoDi.png"width="120px"></a>
                 <p>Khám phá những địa điểm du lịch, vui chơi, nhà hàng quán cafe hấp dẫn!</p>
             </aside>
         </div>
         <div class="two_1">
             <section>
                 <div class="box_1_1">
-                    <a href="#"><img src="/BTL/images/anh480.png"></a>
+                    <a href="#"><img src="../images/anh480.png"></a>
                 </div>
                 <p><b><a href="#">Pop Mart mở chi nhánh thứ ba tại Việt Nam, giới trẻ "phát cuồng" không ngừng săn lùng Labubu phiên bản mới</a></b></p>
                 <p><time>13 ngày trước</time></p>
@@ -57,12 +57,12 @@
             </section>
             <aside>
                 <div class="box_2_2">
-                    <a href="#"><img src="/BTL/images/anh481.png"></a>
+                    <a href="#"><img src="../images/anh481.png"></a>
                 </div>
                     <span><b><a href="#">Nàng mơ chỉ “đu trend” mùa thu của giới trẻ mà làm dậy sóng cả con phố lẫn cộng...</a></b></span><br>
                     <span><time>2 tháng trước</time></span>
                 <div class="box_2_3">
-                    <a href="#"><img src="/BTL/images/anh482.png"></a>
+                    <a href="#"><img src="../images/anh482.png"></a>
                 </div>
                     <span><b><a href="#">Indonesia sẵn sàng cạnh tranh để giành suất biểu diễn độc quyền như Taylor Swift</a></b></span><br>
                     <span><time>3 tháng trước</time></span>
@@ -71,7 +71,7 @@
 
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh483.png"></a></p>
+                <p><a href="#"><img src="../images/anh483.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 4 tháng trước</time></span>
@@ -81,7 +81,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh484.png"></a></p>
+                <p><a href="#"><img src="../images/anh484.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 4 tháng trước</time></span>
@@ -91,7 +91,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh485.png"></a></p>
+                <p><a href="#"><img src="../images/anh485.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 5 tháng trước</time></span>
@@ -101,7 +101,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh486.png"></a></p>
+                <p><a href="#"><img src="../images/anh486.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 5 tháng trước</time></span>
@@ -111,7 +111,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh487.png"></a></p>
+                <p><a href="#"><img src="../images/anh487.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 5 tháng trước</time></span>
@@ -121,7 +121,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh488.png"></a></p>
+                <p><a href="#"><img src="../images/anh488.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 6 tháng trước</time></span>
@@ -131,7 +131,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh489.png"></a></p>
+                <p><a href="#"><img src="../images/anh489.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 9 tháng trước</time></span>
@@ -141,7 +141,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh490.png"></a></p>
+                <p><a href="#"><img src="../images/anh490.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 9 tháng trước</time></span>
@@ -151,7 +151,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh491.png"></a></p>
+                <p><a href="#"><img src="../images/anh491.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 10 tháng trước</time></span>
@@ -161,7 +161,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh492.png"></a></p>
+                <p><a href="#"><img src="../images/anh492.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 11 tháng trước</time></span>
@@ -171,7 +171,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh493.png"></a></p>
+                <p><a href="#"><img src="../images/anh493.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 11 tháng trước</time></span>
@@ -181,7 +181,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh494.png"></a></p>
+                <p><a href="#"><img src="../images/anh494.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 11 tháng trước</time></span>
@@ -191,7 +191,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh495.png"></a></p>
+                <p><a href="#"><img src="../images/anh495.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 12 tháng trước</time></span>
@@ -201,7 +201,7 @@
         </div>
         <div class="five">
             <section>
-                <p><a href="#"><img src="/BTL/images/anh496.png"></a></p>
+                <p><a href="#"><img src="../images/anh496.png"></a></p>
             </section>
             <aside>
                 <span><b><a href="#">Ăn - Quẩy - Đi </a></b><time>- 12 tháng trước</time></span>
@@ -212,7 +212,7 @@
         <hr/>
     </div>
     <div class="footer-menu">
-        <a href="#">Star</a> | <a href="#">Ciné</a> | <a href="#">Musik</a> | <a href="#">Beauty & Fashion</a> | <a href="#">Sport</a> | <a href="/BTL/DOI_SONG/DoiSong.html">Đời sống</a> | <a href="/BTL/XA_HOI/XaHoi.html">Xã hội</a> | <a href="/BTL/AN_QUAY_DI/An.html">Ăn - Quẩy - Đi</a> | <a href="#">Xem Mua Luôn</a> | <a href="/BTL/DOI_SONG/TheGioiDoDay.html">Thế giới đó đây</a> | <a href="/BTL/SUC_KHOE/SucKhoe.html">Sức khỏe</a> | <a href="#">Tek-Life</a> | <a href="#">Học đường</a> | <a href="/BTL/MONEY-Z/Money-Z.html">Money-Z</a> | <a href="#">Video</a>
+        <a href="#">Star</a> | <a href="#">Ciné</a> | <a href="#">Musik</a> | <a href="#">Beauty & Fashion</a> | <a href="#">Sport</a> | <a href="../DOI_SONG/DoiSong.html">Đời sống</a> | <a href="../XA_HOI/XaHoi.html">Xã hội</a> | <a href="../AN_QUAY_DI/An.html">Ăn - Quẩy - Đi</a> | <a href="#">Xem Mua Luôn</a> | <a href="../DOI_SONG/TheGioiDoDay.html">Thế giới đó đây</a> | <a href="../SUC_KHOE/SucKhoe.html">Sức khỏe</a> | <a href="#">Tek-Life</a> | <a href="#">Học đường</a> | <a href="../MONEY-Z/Money-Z.html">Money-Z</a> | <a href="#">Video</a>
     </div>
     <div class="footer-max">
         <div class="footer-table1">
