--- a/BTL/AN_QUAY_DI/Di.html
+++ b/BTL/AN_QUAY_DI/Di.html
@@ -238,17 +238,17 @@
                 <tr>
                     <td>
                         <section>
-                            <a href=""><img src="/BTL/images/logo1.png" ></img></a>
+                            <a href=""><img src="../images/logo1.png" ></img></a>
                         </section>
                         <aside>
                             <p><b>ĐÓNG GÓP NỘI DUNG</b></p>
                             <div class="footer-table-mini">
                                 <div class="footer-mini1">
-                                    <a href="#"><img src="/BTL/images/logodauHoi.png" width="20px"></a>
+                                    <a href="#"><img src="../images/logodauHoi.png" width="20px"></a>
                                     <input type="button" value="CÂU HỎI THƯỜNG GẶP">
                                 </div>
                                 <div class="footer-mini2">
-                                    <a href="#"><img src="/BTL/images/logoEmaildo.png" width="25px"></a>
+                                    <a href="#"><img src="../images/logoEmaildo.png" width="25px"></a>
                                     <p><a href="#">bandoc@kenh14</a></p>
                                 </div>
                             </div>
@@ -259,7 +259,7 @@
             </table>
         </div>
         <div class="footer-table2">
-            <a href="#"><img src="/BTL/images/logo2.png" width="530px" height="130px"></img></a>
+            <a href="#"><img src="../images/logo2.png" width="530px" height="130px"></img></a>
         </div>
     </div>
 
@@ -269,7 +269,7 @@
             <span>Tầng 21, Tòa nhà Center Building, Hapulico Complex, số 1 Nguyễn Huy Tưởng, phường Thanh Xuân Trung, quận Thanh Xuân, Hà Nội.</span><br>
             <span>Điện thoại: 024 7309 5555, máy lẻ 62.370</span>
             <div class="logo-mini">
-                <a href="#"><img src="/BTL/images/logoDC.png" width="17px"></a>
+                <a href="#"><img src="../images/logoDC.png" width="17px"></a>
                 <span><b><a href="#">XEM BẢN ĐỒ</a></b></span>
             </div>
 
@@ -278,7 +278,7 @@
                 <span>Tầng 4, Tòa nhà 123, số 127 Võ Văn Tần, phường 6, quận 3, TP. Hồ Chí Minh.</span><br>
                 <span>Điện thoại: 028 7307 7979</span>
                 <div class="logo-mini">
-                    <a href="#"><img src="/BTL/images/logoDC.png" width="15px"></a>
+                    <a href="#"><img src="../images/logoDC.png" width="15px"></a>
                     <span><b><a href="#">XEM BẢN ĐỒ</a></b></span>
                 </div>
             </div>    
@@ -289,20 +289,20 @@
             <span>Bà Nguyễn Bích Minh</span><br>
             <h4>HỢP TÁC TRUYỀN THÔNG</h4>
             <div class="logo-mini">
-                <img src="/BTL/images/logoDT.png" width="20px"></a>
+                <img src="../images/logoDT.png" width="20px"></a>
                 <span>024.73095555 (máy lẻ 62.370)</span><br>
             </div>
             <div class="logo-mini-1">
-                <a href="#"><img src="/BTL/images/logoThu.png" width="30px"></a>
+                <a href="#"><img src="../images/logoThu.png" width="30px"></a>
                 <span><a href="mailto:giaitrixahoi@admicro.vn">giaitrixahoi@admicro.vn</a></span>
             </div>
             <h4>LIÊN HỆ QUẢNG CÁO</h4>
             <div class="logo-mini">
-                <img src="/BTL/images/logoDT.png" width="20px"></a>
+                <img src="../images/logoDT.png" width="20px"></a>
                 <span>02473007108</span>
             </div>
             <div class="logo-mini-1">
-                <a href="#"><img src="/BTL/images/logoThu.png" width="30px"></a>
+                <a href="#"><img src="../images/logoThu.png" width="30px"></a>
                 <span><a href="mailto:giaitrixahoi@admicro.vn">giaitrixahoi@admicro.vn</a></span>
             </div>
             <div class="chat-table-1">
@@ -317,7 +317,7 @@
         </div>
         <hr class="DK"/>
         <div class="footer-mini-three">
-            <a href=""><img src="/BTL/images/logoVCCorp.png" width="120px" ></a>
+            <a href=""><img src="../images/logoVCCorp.png" width="120px" ></a>
             <p>© Copyright 2007 - 2024 – <b>Công ty Cổ phần VCCorp</b></p>
             <p>Tầng 17, 19, 20, 21 Tòa nhà Center Building - Hapulico Complex, Số 1 Nguyễn Huy Tưởng, Thanh Xuân, Hà Nội.</p>
             <p>Giấy phép thiết lập trang thông tin điện tử tổng hợp trên mạng số 2215/GP-TTĐT do Sở Thông tin và Truyền thông Hà Nội cấp ngày 10 tháng 4 năm 2019</p>
