--- a/BTL/DOI_SONG/DoiSong.html
+++ b/BTL/DOI_SONG/DoiSong.html
@@ -317,7 +317,7 @@
                 <aside>
                     <p><b><a href="#">Màn đối đáp của Hằng Du Mục với khách hàng trên fanpage 2 triệu người theo dõi gây tranh cãi</a></b></p>
                     <p><b>Đời sống -</b><time> 2 giờ trước</time></p>
-                    <p>Nhiều người không đồng tình với hướng xử lý mà Hằng Du Mục đưa ra. Chuyện gì đây?></p>
+                    <p>Nhiều người không đồng tình với hướng xử lý mà Hằng Du Mục đưa ra. Chuyện gì đây?</p>
                 </aside>
             </div>
             <hr/>
