--- a/BTL/SUC_KHOE/DinhDuong.html
+++ b/BTL/SUC_KHOE/DinhDuong.html
@@ -194,7 +194,7 @@
     <div class="space">
     </div>
     <div id="page">
-        <div class="hi_3">
+        <div class="hi_3">S
             <ul>
                 <li><a href="../SUC_KHOE/SucKhoe.html"><b>SỨC KHỎE</b></a></li>
                 <li><a href="../SUC_KHOE/TinTuc.html"><b>TIN TỨC</b></a></li>
@@ -202,7 +202,7 @@
                 <li><a href="../SUC_KHOE/KhoeDep.html"><b>KHỎE ĐẸP</b></a></li>
                 <li><a href="../SUC_KHOE/GioiTinh.html"><b>GIỚI TÍNH</b></a></li>
                 <li><a href="CacBenh.html"><b>CÁC BỆNH</b></a></li>
-                <li><a href="../SUC_KHOE/Dr.Blue.html"><img src="/BTL/images/logo_dr.blue.png.png"></a></li>
+                <li><a href="../SUC_KHOE/Dr.Blue.html"><img src="../images/logo_dr.blue.png.png"></a></li>
                 <li><a href="../DOI_SONG/DoiSong.html"><b>ĐỜI SỐNG</b></a></li>
                 <li><a href="../DOI_SONG/KhamPha.html"><b>KHÁM PHÁ</b></a></li>
             </ul>
