--- a/BTL/SUC_KHOE/SucKhoe.html
+++ b/BTL/SUC_KHOE/SucKhoe.html
@@ -202,7 +202,7 @@
                 <li><a href="../SUC_KHOE/KhoeDep.html"><b>KHỎE ĐẸP</b></a></li>
                 <li><a href="../SUC_KHOE/GioiTinh.html"><b>GIỚI TÍNH</b></a></li>
                 <li><a href="CacBenh.html"><b>CÁC BỆNH</b></a></li>
-                <li><a href="../SUC_KHOE/Dr.Blue.html"><img src="..S/images/logo_dr.blue.png.png"></a></li>
+                <li><a href="../SUC_KHOE/Dr.Blue.html"><img src="../images/logo_dr.blue.png.png"></a></li>
                 <li><a href="../DOI_SONG/DoiSong.html"><b>ĐỜI SỐNG</b></a></li>
                 <li><a href="../DOI_SONG/KhamPha.html"><b>KHÁM PHÁ</b></a></li>
             </ul>
