--- a/BTL/SUC_KHOE/Cacbenh/TietNieuNamHoc.html
+++ b/BTL/SUC_KHOE/Cacbenh/TietNieuNamHoc.html
@@ -198,15 +198,15 @@
     <div id="page">
         <div class="hi_3">
             <ul>
-                <li><a href="/BTL/SUC_KHOE/SucKhoe.html"><b>SỨC KHỎE</b></a></li>
-                <li><a href="/BTL/SUC_KHOE/TinTuc.html"><b>TIN TỨC</b></a></li>
-                <li><a href="/BTL/SUC_KHOE/DinhDuong.html"><b>DINH DƯỠNG</b></a></li>
-                <li><a href="/BTL/SUC_KHOE/KhoeDep.html"><b>KHỎE ĐẸP</b></a></li>
-                <li><a href="/BTL/SUC_KHOE/GioiTinh.html"><b>GIỚI TÍNH</b></a></li>
+                <li><a href="SucKhoe.html"><b>SỨC KHỎE</b></a></li>
+                <li><a href="TinTuc.html"><b>TIN TỨC</b></a></li>
+                <li><a href="DinhDuong.html"><b>DINH DƯỠNG</b></a></li>
+                <li><a href="KhoeDep.html"><b>KHỎE ĐẸP</b></a></li>
+                <li><a href="GioiTinh.html"><b>GIỚI TÍNH</b></a></li>
                 <li><a href="CacBenh.html"><b>CÁC BỆNH</b></a></li>
-                <li><a href="/BTL/SUC_KHOE/Dr.Blue.html"><img src="/BTL/images/logo_dr.blue.png.png"></a></li>
-                <li><a href="/BTL/DOI_SONG/DoiSong.html"><b>ĐỜI SỐNG</b></a></li>
-                <li><a href="/BTL/DOI_SONG/KhamPha.html"><b>KHÁM PHÁ</b></a></li>
+                <li><a href="Dr.Blue.html"><img src="../images/logo_dr.blue.png.png"></a></li>
+                <li><a href="DoiSong.html"><b>ĐỜI SỐNG</b></a></li>
+                <li><a href="KhamPha.html"><b>KHÁM PHÁ</b></a></li>
             </ul>
         </div><br>
         <div class="hi_4">
