--- a/BTL/SUC_KHOE/DinhDuong.html
+++ b/BTL/SUC_KHOE/DinhDuong.html
@@ -173,7 +173,7 @@
                             <a href="../SUC_KHOE/DinhDuong.html">Dinh dưỡng</a>
                             <a href="../SUC_KHOE/KhoeDep.html">Khỏe đẹp</a>
                             <a href="../SUC_KHOE/GioiTinh.html">Giới tính</a>
-                            <a href="../SUC_KHOE/CacBenh.html">Các bệnh</a>
+                            <a href="../SUC_KHOE/Cacbenh/CacBenh.html">Các bệnh</a>
                         </div>
                     </div>
                 </div>
@@ -194,15 +194,15 @@
     <div class="space">
     </div>
     <div id="page">
-        <div class="hi_3">S
+        <div class="hi_3">
             <ul>
-                <li><a href="../SUC_KHOE/SucKhoe.html"><b>SỨC KHỎE</b></a></li>
-                <li><a href="../SUC_KHOE/TinTuc.html"><b>TIN TỨC</b></a></li>
-                <li><a href="../SUC_KHOE/DinhDuong.html"><b>DINH DƯỠNG</b></a></li>
-                <li><a href="../SUC_KHOE/KhoeDep.html"><b>KHỎE ĐẸP</b></a></li>
-                <li><a href="../SUC_KHOE/GioiTinh.html"><b>GIỚI TÍNH</b></a></li>
-                <li><a href="CacBenh.html"><b>CÁC BỆNH</b></a></li>
-                <li><a href="../SUC_KHOE/Dr.Blue.html"><img src="../images/logo_dr.blue.png.png"></a></li>
+                <li><a href="SucKhoe.html"><b>SỨC KHỎE</b></a></li>
+                <li><a href="TinTuc.html"><b>TIN TỨC</b></a></li>
+                <li><a href="DinhDuong.html"><b>DINH DƯỠNG</b></a></li>
+                <li><a href="KhoeDep.html"><b>KHỎE ĐẸP</b></a></li>
+                <li><a href="GioiTinh.html"><b>GIỚI TÍNH</b></a></li>
+                <li><a href="../Cacbenh/CacBenh.html"><b>CÁC BỆNH</b></a></li>
+                <li><a href="Dr.Blue.html"><img src="../images/logo_dr.blue.png.png"></a></li>
                 <li><a href="../DOI_SONG/DoiSong.html"><b>ĐỜI SỐNG</b></a></li>
                 <li><a href="../DOI_SONG/KhamPha.html"><b>KHÁM PHÁ</b></a></li>
             </ul>
