--- a/BTL/SUC_KHOE/TinTuc.html
+++ b/BTL/SUC_KHOE/TinTuc.html
@@ -201,7 +201,7 @@
                 <li><a href="DinhDuong.html"><b>DINH DƯỠNG</b></a></li>
                 <li><a href="KhoeDep.html"><b>KHỎE ĐẸP</b></a></li>
                 <li><a href="GioiTinh.html"><b>GIỚI TÍNH</b></a></li>
-                <li><a href="../Cacbenh/CacBenh.html"><b>CÁC BỆNH</b></a></li>
+                <li><a href="../SUC_KHOE/Cacbenh/CacBenh.html"><b>CÁC BỆNH</b></a></li>
                 <li><a href="Dr.Blue.html"><img src="../images/logo_dr.blue.png.png"></a></li>
                 <li><a href="../DOI_SONG/DoiSong.html"><b>ĐỜI SỐNG</b></a></li>
                 <li><a href="../DOI_SONG/KhamPha.html"><b>KHÁM PHÁ</b></a></li>
