--- a/BTL/SUC_KHOE/Cacbenh/CacBenh.html
+++ b/BTL/SUC_KHOE/Cacbenh/CacBenh.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kenh14 </title>
-    <link rel="stylesheet" href="../CSS_1/styles.css">
+    <link rel="stylesheet" href="/BTL/CSS_1/styles.css">
     <link rel="import" href="component.html">
     <script src="../Scrip.js/script.js"></script>
     <!-- Thêm liên kết Font Awesome -->
@@ -209,18 +209,18 @@
         </div><br>
         <div class="hi_4">
             <ul>
-                <li><a href="CacBenh.html">Các bệnh</a></li>
-                <li><a href="UngThu.html">Ung thư</a></li>
-                <li><a href="TimMach.html">Tim mạch</a></li>
-                <li><a href="TieuDuong.html">Tiểu đường</a></li>
-                <li><a href="GanThan.html">Gan thận</a></li>
-                <li><a href="CoXuongKhop.html">Cơ xương khớp</a></li>
-                <li><a href="TieuHoa.html">Tiêu hóa</a></li>
-                <li><a href="DaLieu.html">Da liễu</a></li>
-                <li><a href="DinhDuongKhoe.html">Dinh dưỡng khỏe</a></li>
-                <li><a href="HoHap.html">Hô hấp</a></li>
-                <li><a href="SanPhuKhoa.html">Sản phụ khoa</a></li>
-                <li><a href="TietNieuNamHoc.html">Tiết niệu nam học</a></li>
+                <li><a href="../SUC_KHOE/Cacbenh/CacBenh.html"><b>CÁC BỆNH</b></a></li>
+                <li><a href="../SUC_KHOE/Cacbenh/UngThu.html">Ung thư</a></li>
+                <li><a href="../SUC_KHOE/Cacbenh/TimMach.html">Tim mạch</a></li>
+                <li><a href="../SUC_KHOE/Cacbenh/TieuDuong.html">Tiểu đường</a></li>
+                <li><a href="../SUC_KHOE/Cacbenh/GanThan.html">Gan thận</a></li>
+                <li><a href="../SUC_KHOE/Cacbenh/CoXuongKhop.html">Cơ xương khớp</a></li>
+                <li><a href="../SUC_KHOE/Cacbenh/TieuHoa.html">Tiêu hóa</a></li>
+                <li><a href="../SUC_KHOE/Cacbenh/DaLieu.html">Da liễu</a></li>
+                <li><a href="../SUC_KHOE/Cacbenh/DinhDuongKhoe.html">Dinh dưỡng khỏe</a></li>
+                <li><a href="../SUC_KHOE/Cacbenh/HoHap.html">Hô hấp</a></li>
+                <li><a href="../SUC_KHOE/Cacbenh/SanPhuKhoa.html">Sản phụ khoa</a></li>
+                <li><a href="../SUC_KHOE/Cacbenh/STietNieuNamHoc.html">Tiết niệu nam học</a></li>
             </ul>
         </div><br>
         <div class="body">
