--- a/BTL/SUC_KHOE/Cacbenh/CacBenh.html
+++ b/BTL/SUC_KHOE/Cacbenh/CacBenh.html
@@ -6,7 +6,7 @@
     <title>Kenh14 </title>
     <link rel="stylesheet" href="/BTL/CSS_1/styles.css">
     <link rel="import" href="component.html">
-    <script src="../Scrip.js/script.js"></script>
+    <script src="/BTL/Scrip.js/script.js"></script>
     <!-- Thêm liên kết Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="shortcut icon" href="https://kenh14cdn.com/web_images/kenh14-favicon.ico" type="image/x-icon">
@@ -197,12 +197,12 @@
         <div class="hi_3">
             <ul>
                 <li><a href="../SUC_KHOE/SucKhoe.html"><b>SỨC KHỎE</b></a></li>
-                <li><a href="../SUC_KHOE/TinTuc.html"><b>TIN TỨC</b></a></li>
-                <li><a href="../SUC_KHOE/DinhDuong.html"><b>DINH DƯỠNG</b></a></li>
+                <li><a href="/BTL/SUC_KHOE/TinTuc.html"><b>TIN TỨC</b></a></li>
+                <li><a href="BTL/SUC_KHOE/DinhDuong.html"><b>DINH DƯỠNG</b></a></li>
                 <li><a href="/BTL/SUC_KHOE/KhoeDep.html"><b>KHỎE ĐẸP</b></a></li>
                 <li><a href="/BTL/SUC_KHOE/GioiTinh.html"><b>GIỚI TÍNH</b></a></li>
                 <li><a href="/BTL/SUC_KHOE/Cacbenh/CacBenh.html"><b>CÁC BỆNH</b></a></li>
-                <li><a href="/BTL/SUC_KHOE/Dr.Blue.html"><img src="../images/logo_dr.blue.png.png"></a></li>
+                <li><a href="/BTL/SUC_KHOE/Dr.Blue.html"><img src="/BTL/images/logo_dr.blue.png.png"></a></li>
                 <li><a href="/BTL/DOI_SONG/DoiSong.html"><b>ĐỜI SỐNG</b></a></li>
                 <li><a href="/BTL/DOI_SONG/KhamPha.html"><b>KHÁM PHÁ</b></a></li>
             </ul>
