--- a/BTL/SUC_KHOE/Dr.Blue.html
+++ b/BTL/SUC_KHOE/Dr.Blue.html
@@ -173,7 +173,7 @@
                             <a href="../SUC_KHOE/DinhDuong.html">Dinh dưỡng</a>
                             <a href="../SUC_KHOE/KhoeDep.html">Khỏe đẹp</a>
                             <a href="../SUC_KHOE/GioiTinh.html">Giới tính</a>
-                            <a href="../SUC_KHOE/Cacbenh/CacBenh.html">Các bệnh</a>
+                            <a href="../SUC_KHOE/CacBenh.html">Các bệnh</a>
                         </div>
                     </div>
                 </div>
