--- a/BTL/SUC_KHOE/CoXuongKhop.html
+++ b/BTL/SUC_KHOE/CoXuongKhop.html
@@ -196,15 +196,15 @@
     <div id="page">
         <div class="hi_3">
             <ul>
-                <li><a href="../SUC_KHOE/SucKhoe.html"><b>SỨC KHỎE</b></a></li>
-                <li><a href="../SUC_KHOE/TinTuc.html"><b>TIN TỨC</b></a></li>
-                <li><a href="../SUC_KHOE/DinhDuong.html"><b>DINH DƯỠNG</b></a></li>
-                <li><a href="../SUC_KHOE/KhoeDep.html"><b>KHỎE ĐẸP</b></a></li>
-                <li><a href="../SUC_KHOE/GioiTinh.html"><b>GIỚI TÍNH</b></a></li>
-                <li><a href="../Cacbenh/CacBenh.html"><b>CÁC BỆNH</b></a></li>
-                <li><a href="../SUC_KHOE/Dr.Blue.html"><img src="../images/logo_dr.blue.png.png"></a></li>
-                <li><a href="../DOI_SONG/DoiSong.html"><b>ĐỜI SỐNG</b></a></li>
-                <li><a href="../DOI_SONG/KhamPha.html"><b>KHÁM PHÁ</b></a></li>
+                <li><a href="SucKhoe.html"><b>SỨC KHỎE</b></a></li>
+                <li><a href="TinTuc.html"><b>TIN TỨC</b></a></li>
+                <li><a href="DinhDuong.html"><b>DINH DƯỠNG</b></a></li>
+                <li><a href="KhoeDep.html"><b>KHỎE ĐẸP</b></a></li>
+                <li><a href="GioiTinh.html"><b>GIỚI TÍNH</b></a></li>
+                <li><a href="CacBenh.html"><b>CÁC BỆNH</b></a></li>
+                <li><a href="Dr.Blue.html"><img src="../images/logo_dr.blue.png.png"></a></li>
+                <li><a href="DoiSong.html"><b>ĐỜI SỐNG</b></a></li>
+                <li><a href="KhamPha.html"><b>KHÁM PHÁ</b></a></li>
             </ul>
         </div><br>
         <div class="hi_4">
@@ -225,121 +225,68 @@
         </div><br>
         <div class="body">
             <div class="one_2">
-                <p>TIN TỨC VỀ DA LIỄU - DA LIỄU</p>
-                <p id="box1">da liễu</p>
+                <p>TIN TỨC VỀ TIỂU ĐƯỜNG - TIỂU ĐƯỜNG</p>
+                <p id="box1">tiểu đường</p>
             </div>
             <hr>
             <div class="two_4">
                 <section>
-                    <a href="#"><img src="../images/anh673.png"></a>
+                    <a href="#"><img src="../images/anh658.png" ></a>
                 </section>
                 <aside>
-                    <p><b><a href="#">Bố mẹ tự chữa, nhiều trẻ nhập viện vì bệnh trở nặng</a></b></p>
+                    <p><b><a href="#">Loại rau giàu vitamin C gấp đôi bắp cải xanh, giá bán bèo bọt nhưng tốt cho xương, tim và mắt</a></b></p>
+                    <p><b>Sức khỏe -</b><time> 1 ngày trước</time></p>
+                    <p>Với lượng dinh dưỡng dồi dào, loại rau này mang lại nhiều lợi ích cho sức khỏe con người.</p>
+                </aside>
+            </div>
+            <hr/>
+            <div class="two">
+                <section>
+                    <a href="#"><img src="../images/anh659.png"></a>
+                </section>
+                <aside>
+                    <p><b><a href="#">Chữa viêm khớp nhưng vẫn thích dùng 1 đồ uống, người đàn ông bị phù nề mặt mũi, tình trạng đau nhức thêm nặng</a></b></p>
+                    <p><b>Sức khỏe -</b><time> 2 ngày trước</time></p>
+                    <p>Bệnh nhân đến gặp bác sĩ trong tình trạng phù mặt, cơ thể bị tích nước, được nhận định mắc hội chứng Cushing. Những vùng bị đau bao gồm cổ tay, cổ chân, hông, mông, khi xoay cổ tay, cổ chân thường có dấu...</p>
+                </aside>
+            </div>
+            <hr/>
+            <div class="two">
+                <section>
+                    <a href="#"><img src="../images/anh660.png"></a>
+                </section>
+                <aside>
+                    <p><b><a href="#">Sao phim "Sex and the City" sau tuổi 50 luôn đi bộ từng này bước mỗi ngày, ăn vặt 2 món để cơ thể săn chắc, khỏe mạnh</a></b></p>
                     <p><b>Sức khỏe -</b><time> 1 tháng trước</time></p>
-                    <p>Ước tính, từ đầu tháng 9 đến nay, bệnh viện Da Liễu TPHCM đã tiếp nhận hơn 100 trường hợp trẻ nhập viện vì mắc bệnh...</p>
+                    <p>Đi bộ giúp Sarah Jessica Parker vừa có vóc dáng đẹp lại khỏe mạnh hơn. Tuy nhiên, mỹ nhân phim "Sex and the City" tiết lộ, sau tuổi 50 cần đi được số bước như sau mới đảm bảo khỏe xương khớp, vóc dáng...</p>
                 </aside>
             </div>
             <hr/>
             <div class="two">
                 <section>
-                    <a href="#"><img src="../images/anh674.png"></a>
+                    <a href="#"><img src="../images/anh661.png"></a>
                 </section>
                 <aside>
-                    <p><a href="#"><img src="../images/anh624.1.png" width="150px"></a></p>
-                    <p><b><a href="#">Bác sĩ da liễu tiết lộ thời điểm và thời gian tắm tốt nhất cho da, 4 việc khi tắm tưởng tốt hóa hại</a></b></p>
-                    <p><b>Sức khỏe -</b><time> 5 tháng trước</time></p>
-                    <p>Sẽ có không ít người bất ngờ khi biết rằng tắm quá kỹ hay tắm nhiều lần mỗi ngày hóa ra không tốt cho da mà còn hại sức khỏe.</p>
+                    <p><a href="#"><img src="../images/anh661.1.png" width="150px"></a></p>
+                    <p><b><a href="#">Bài tập cải thiện tình trạng ưỡn gối, cong chân: Chăm tập mỗi ngày chị em sớm có chân thẳng, tránh thoái hóa khớp gối</a></b></p>
+                    <p><b>Sức khỏe -</b><time> 3 tháng trước</time></p>
+                    <p>Sở hữu đôi chân thon giúp chị em tự tin hơn trong việc lựa chọn trang phục, thoải mái vận động và thể hiện cá tính bản thân.</p>
                 </aside>
             </div>
             <hr/>
             <div class="two">
                 <section>
-                    <a href="#"><img src="../images/anh675.png"></a>
+                    <a href="#"><img src="../images/anh662.png"></a>
                 </section>
                 <aside>
-                    <p><b><a href="#">Mua mỹ phẩm trên mạng làm đẹp cấp tốc, nhiều người mất Tết vì biến chứng</a></b></p>
-                    <p><b>Sức khỏe -</b><time> 9 tháng trước</time></p>
-                    <p>Nghe theo quảng cáo, lời giới thiệu của bạn bè, nhiều người lên mạng đặt mua mỹ phẩm không rõ nguồn gốc khiến tiền mất, tật mang.</p>
+                    <p><a href="#"><img src="../images/anh662.1.png" width="150px"></a></p>
+                    <p><b><a href="#">Một căn bệnh "nhà giàu" đang ngày càng trẻ hóa, xuất hiện nhiều ở độ tuổi 25-35 tuổi
+                        Sức khỏe - 3 tháng trước</a></b></p>
+                    <p><b>Sức khỏe -</b><time> 3 tháng trước</time></p>
+                    <p>Trước đây, bệnh Gút từng được coi là bệnh xương khớp của nhà giàu, thường gặp ở độ tuổi 40-50 tuổi.</p>
                 </aside>
             </div>
-            <hr/>
-            <div class="two">
-                <section>
-                    <a href="#"><img src="../images/anh676.png"></a>
-                </section>
-                <aside>
-                    <p><b><a href="#">3 bất thường ai cũng tưởng vấn đề da liễu nhưng thực chất đang cố vạch trần bệnh tim</a></b></p>
-                    <p><b>Sức khỏe -</b><time> 11 tháng trước</time></p>
-                    <p>Khó thở, đau tức ngực, rối loạn nhịp tim không phải là những dấu hiệu duy nhất cảnh báo bạn đang gặp nguy hiểm vì bệnh tim.</p>
-                </aside>
-            </div>
-            <hr/>
-            <div class="two">
-                <section>
-                    <a href="#"><img src="../images/anh677.png"></a>
-                </section>
-                <aside>
-                    <p><b><a href="#">Học TikTok đun nước lá trị nám, 4 phụ nữ mặt loang lổ sau một đêm</a></b></p>
-                    <p><b>Sức khỏe -</b><time> 2 năm trước</time></p>
-                    <p>Sau khi xem video hướng dẫn dùng nước lá trầu không để trị nám trên TikTok, 4 phụ nữ ở Hà Nội rủ nhau thực hiện nhưng kết quả là mặt loang lổ sau một đêm.</p>
-                </aside>
-            </div>
-            <hr/>
-            <div class="two">
-                <section>
-                    <a href="#"><img src="../images/anh678.png"></a>
-                </section>
-                <aside>
-                    <p><b><a href="#">Curél đồng hành tại Hội nghị Khoa học da liễu được tổ chức bởi Bệnh viện Da liễu TP.HCM</a></b></p>
-                    <p><b>Sức khỏe -</b><time> 2 năm trước</time></p>
-                    <p>Với vai trò là nhãn hàng đồng hành quen thuộc, ngày 30/12 vừa qua Curél Việt Nam tiếp tục tham gia Hội nghị Khoa học thường niên do Bệnh viện Da liễu TP.HCM tổ chức.</p>
-                </aside>
-            </div>
-            <hr/>
-            <div class="two">
-                <section>
-                    <a href="#"><img src="../images/anh679.png"></a>
-                </section>
-                <aside>
-                    <p><b><a href="#">Bác sĩ da liễu chỉ ra sai lầm "kinh điển" khi sử dụng kem chống nắng vào mùa hè khiến làn da chị em bị sạm đen, nhăn nheo, đẩy nhanh lão hóa</a></b></p>
-                    <p><b>Sức khỏe -</b><time> 3 năm trước</time></p>
-                    <p>Sử dụng kem chống nắng trong mùa hè là điều cần thiết nhưng dùng như thế nào để sản phẩm phát huy đúng tác dụng và không làm tổn thương da thì không phải ai cũng hiểu rõ.</p>
-                </aside>
-            </div>
-            <hr/>
-            <div class="two">
-                <section>
-                    <a href="#"><img src="../images/anh680.png"></a>
-                </section>
-                <aside>
-                    <p><b><a href="#">Bác sĩ da liễu bật mí: Khi nào nên gội đầu, như thế nào là chăm sóc tóc đúng cách?</a></b></p>
-                    <p><b>Sức khỏe -</b><time> 3 năm trước</time></p>
-                    <p>“Cái răng cái tóc là góc con người”. Làm thế nào để có một mái tóc bóng khoẻ không lo gàu và tóc gãy rụng? Hãy cùng nghe lời khuyên của bác sĩ da liễu.</p>
-                </aside>
-            </div>
-            <hr/>
-            <div class="two">
-                <section>
-                    <a href="#"><img src="../images/anh681.png"></a>
-                </section>
-                <aside>
-                    <p><b><a href="#">Lựa chọn của bác sĩ: 8 sản phẩm skincare lành tính giúp da bạn đẹp căng, nếu có mụn cũng sạch bong không tỳ vết</a></b></p>
-                    <p><b>Sức khỏe -</b><time> 5 năm trước</time></p>
-                    <p>Bác sĩ da liễu nổi tiếng David Lim (Úc) đã chỉ ra những sản phẩm skincare cực thân thiện với làn da được anh cùng rất nhiều đồng nghiệp khác tin tưởng.</p>
-                </aside>
-            </div>
-            <hr/>
-            <div class="two">
-                <section>
-                    <a href="#"><img src="../images/anh682.png"></a>
-                </section>
-                <aside>
-                    <p><b><a href="#">Mụn lưng "chữa mãi không hết" có thể là do bạn gội đầu chưa đủ sạch</a></b></p>
-                    <p><b>Sức khỏe -</b><time> 6 năm trước</time></p>
-                    <p>Đây là điều chẳng ai ngờ tới nhưng theo nhiều chuyên gia, một số loại dầu gội nhất định có chứa thành phần hoá chất là nguyên nhân gây mụn lưng.</p>
-                </aside>
-            </div>
-            <hr/>
+            <hr/><br>
         </div>
         <div class="footer-menu">
             <a href="#">Star</a> | <a href="#">Ciné</a> | <a href="#">Musik</a> | <a href="#">Beauty & Fashion</a> | <a href="#">Sport</a> | <a href="../DOI_SONG/DoiSong.html">Đời sống</a> | <a href="../XA_HOI/XaHoi.html">Xã hội</a> | <a href="../AN_QUAY_DI/An.html">Ăn - Quẩy - Đi</a> | <a href="#">Xem Mua Luôn</a> | <a href="../DOI_SONG/TheGioiDoDay.html">Thế giới đó đây</a> | <a href="../SUC_KHOE/SucKhoe.html">Sức khỏe</a> | <a href="#">Tek-Life</a> | <a href="#">Học đường</a> | <a href="../MONEY-Z/Money-Z.html">Money-Z</a> | <a href="#">Video</a>
