--- a/BTL/SUC_KHOE/SucKhoe.html
+++ b/BTL/SUC_KHOE/SucKhoe.html
@@ -173,7 +173,7 @@
                             <a href="../SUC_KHOE/DinhDuong.html">Dinh dưỡng</a>
                             <a href="../SUC_KHOE/KhoeDep.html">Khỏe đẹp</a>
                             <a href="../SUC_KHOE/GioiTinh.html">Giới tính</a>
-                            <a href="../SUC_KHOE/Cacbenh/CacBenh.html">Các bệnh</a>
+                            <a href="../SUC_KHOE/CacBenh.html">Các bệnh</a>
                         </div>
                     </div>
                 </div>
@@ -201,7 +201,7 @@
                 <li><a href="DinhDuong.html"><b>DINH DƯỠNG</b></a></li>
                 <li><a href="KhoeDep.html"><b>KHỎE ĐẸP</b></a></li>
                 <li><a href="GioiTinh.html"><b>GIỚI TÍNH</b></a></li>
-                <li><a href="../SUC_KHOE/Cacbenh/CacBenh.html"><b>CÁC BỆNH</b></a></li>
+                <li><a href="CacBenh.html"><b>CÁC BỆNH</b></a></li>
                 <li><a href="Dr.Blue.html"><img src="../images/logo_dr.blue.png.png"></a></li>
                 <li><a href="../DOI_SONG/DoiSong.html"><b>ĐỜI SỐNG</b></a></li>
                 <li><a href="../DOI_SONG/KhamPha.html"><b>KHÁM PHÁ</b></a></li>
@@ -209,18 +209,18 @@
         </div><br>
         <div class="hi_4">
             <ul>
-                <li><a href="../SUC_KHOE/Cacbenh/CacBenh.html"><b>CÁC BỆNH</b></a></li>
-                <li><a href="../SUC_KHOE/Cacbenh/UngThu.html">Ung thư</a></li>
-                <li><a href="../SUC_KHOE/Cacbenh/TimMach.html">Tim mạch</a></li>
-                <li><a href="../SUC_KHOE/Cacbenh/TieuDuong.html">Tiểu đường</a></li>
-                <li><a href="../SUC_KHOE/Cacbenh/GanThan.html">Gan thận</a></li>
-                <li><a href="../SUC_KHOE/Cacbenh/CoXuongKhop.html">Cơ xương khớp</a></li>
-                <li><a href="../SUC_KHOE/Cacbenh/TieuHoa.html">Tiêu hóa</a></li>
-                <li><a href="../SUC_KHOE/Cacbenh/DaLieu.html">Da liễu</a></li>
-                <li><a href="../SUC_KHOE/Cacbenh/DinhDuongKhoe.html">Dinh dưỡng khỏe</a></li>
-                <li><a href="../SUC_KHOE/Cacbenh/HoHap.html">Hô hấp</a></li>
-                <li><a href="../SUC_KHOE/Cacbenh/SanPhuKhoa.html">Sản phụ khoa</a></li>
-                <li><a href="../SUC_KHOE/Cacbenh/STietNieuNamHoc.html">Tiết niệu nam học</a></li>
+                <li><a href="CacBenh.html">Các bệnh</a></li>
+                <li><a href="UngThu.html">Ung thư</a></li>
+                <li><a href="TimMach.html">Tim mạch</a></li>
+                <li><a href="TieuDuong.html">Tiểu đường</a></li>
+                <li><a href="GanThan.html">Gan thận</a></li>
+                <li><a href="CoXuongKhop.html">Cơ xương khớp</a></li>
+                <li><a href="TieuHoa.html">Tiêu hóa</a></li>
+                <li><a href="DaLieu.html">Da liễu</a></li>
+                <li><a href="DinhDuongKhoe.html">Dinh dưỡng khỏe</a></li>
+                <li><a href="HoHap.html">Hô hấp</a></li>
+                <li><a href="SanPhuKhoa.html">Sản phụ khoa</a></li>
+                <li><a href="TietNieuNamHoc.html">Tiết niệu nam học</a></li>
             </ul>
         </div><br>
         <div class="body">
