--- a/BTL/SUC_KHOE/HoHap.html
+++ b/BTL/SUC_KHOE/HoHap.html
@@ -203,8 +203,8 @@
                 <li><a href="GioiTinh.html"><b>GIỚI TÍNH</b></a></li>
                 <li><a href="CacBenh.html"><b>CÁC BỆNH</b></a></li>
                 <li><a href="Dr.Blue.html"><img src="../images/logo_dr.blue.png.png"></a></li>
-                <li><a href="DoiSong.html"><b>ĐỜI SỐNG</b></a></li>
-                <li><a href="KhamPha.html"><b>KHÁM PHÁ</b></a></li>
+                <li><a href="../DOI_SONG/DoiSong.html"><b>ĐỜI SỐNG</b></a></li>
+                <li><a href="../DOI_SONG/KhamPha.html"><b>KHÁM PHÁ</b></a></li>
             </ul>
         </div><br>
         <div class="hi_4">
