--- a/BTL/SUC_KHOE/SanPhuKhoa.html
+++ b/BTL/SUC_KHOE/SanPhuKhoa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kenh14 </title>
-    <link rel="stylesheet" href="/BTL/CSS_1/styles.css">
+    <link rel="stylesheet" href="../CSS_1/styles.css">
     <link rel="import" href="component.html">
     <script src="../Scrip.js/script.js"></script>
     <!-- Thêm liên kết Font Awesome -->
@@ -203,8 +203,8 @@
                 <li><a href="GioiTinh.html"><b>GIỚI TÍNH</b></a></li>
                 <li><a href="CacBenh.html"><b>CÁC BỆNH</b></a></li>
                 <li><a href="Dr.Blue.html"><img src="../images/logo_dr.blue.png.png"></a></li>
-                <li><a href="DoiSong.html"><b>ĐỜI SỐNG</b></a></li>
-                <li><a href="KhamPha.html"><b>KHÁM PHÁ</b></a></li>
+                <li><a href="../DOI_SONG/DoiSong.html"><b>ĐỜI SỐNG</b></a></li>
+                <li><a href="../DOI_SONG/KhamPha.html"><b>KHÁM PHÁ</b></a></li>
             </ul>
         </div><br>
         <div class="hi_4">
