--- a/BTL/DOI_SONG/NhanVat.html
+++ b/BTL/DOI_SONG/NhanVat.html
@@ -772,7 +772,8 @@
                 <p>Giấy phép thiết lập trang thông tin điện tử tổng hợp trên mạng số 2215/GP-TTĐT do Sở Thông tin và Truyền thông Hà Nội cấp ngày 10 tháng 4 năm 2019</p>
             
             </div>
+        </div>
     </div>
 </body>
-    
+
 </html>
