thêm liên kết liên hệ

--- a/BTL1/Beauty&Fashion/WebBeautyFashion.html
+++ b/BTL1/Beauty&Fashion/WebBeautyFashion.html
@@ -56,7 +56,7 @@
                         <li><a href="demoBTL.html"><i class="fas fa-home"></i></a></li>
                         <li><a href="/BTL1/Star/WebStar.html">Star</a></li>
                         <li><a href="/BTL1/Ciné/WebCine.html">Ciné</a></li>
-                        <li><a href="/BTL1/Musik/WebAuMy.html">Musik</a></li>
+                        <li><a href="/BTL1/Musik/WebMusik.html">Musik</a></li>
                         <li><a href="/BTL1/Beauty&Fashion/WebBeautyFashion.html">Beauty & Fashion</a></li>
                         <li><a href="/BTL/DOI_SONG/DoiSong.html">Đời sống</a></li>
                         <li><a href="/BTL/MONEY-Z/Money-Z.html">Money-Z</a></li>
@@ -183,7 +183,7 @@
                     <a class="mini-web" href="https://apps.apple.com/us/app/kenh14-vn-tin-t%E1%BB%A9c-gi%E1%BB%9Bi-tr%E1%BB%A3/id670518264?ls=1" target="_blank">IOS</a>
                     <a class="mini-web" href="https://play.google.com/store/apps/details?id=vcc.mobilenewsreader.kenh14" target="_blank">Android</a>
                     <a class="title-mini-web" href="https://www.facebook.com/K14vn" target="_blank">Fanpage</a>
-                    <a class="title-mini-web" href="#">Liên hệ</a>
+                    <a class="title-mini-web" href="#" id="#liên hệ">Liên hệ</a>
                     <a class="mini-web" href="https://kenh14.vn/adv.chn">Quảng cáo</a>
                 </div>
             </div>
@@ -499,7 +499,7 @@
                 <a href="#"><img src="../img/emojiMail2.jpg" width="30px"></a>
                 <span><a href="mailto:giaitrixahoi@admicro.vn">giaitrixahoi@admicro.vn</a></span>
             </div>
-            <h4>LIÊN HỆ QUẢNG CÁO</h4>
+            <h4 id="liên hệ">LIÊN HỆ QUẢNG CÁO</h4>
             <div class="logo-mini">
                 <img src="../img/emojiPhone.jpg" width="20px"></a>
                 <span>02473007108</span>
