--- a/BTL/DOI_SONG/ChumAnh.html
+++ b/BTL/DOI_SONG/ChumAnh.html
@@ -57,9 +57,9 @@
         <nav class="main-nav">
             <div class="container">
                 <ul class="mains-menu">
-                    <li><a href="/BTLWeb/BTL1/demoBTL.html"><i class="fas fa-home"></i></a></li>
-                    <li><a href="../BTL1/Star/WebStar.html">Star</a></li>
-                    <li><a href="../Ciné/WebCine.html">Ciné</a></li>
+                    <li><a href="BTL1/demoBTL.html"><i class="fas fa-home"></i></a></li>
+                    <li><a href="/BTL1/Star/WebStar.html">Star</a></li>
+                    <li><a href="/BTL1/Ciné/WebCine.html">Ciné</a></li>
                     <li><a href="/BTL1/Musik/WebMusik.html">Musik</a></li>
                     <li><a href="/BTL1/Beauty&Fashion/WebBeautyFashion.html">Beauty & Fashion</a></li>
                     <li><a href="../DOI_SONG/DoiSong.html">Đời sống</a></li>
@@ -136,9 +136,9 @@
                     <div class="menu-column">
                         <a class="title-menu" href="/BTL1/Star/WebStar.html">Star</a>
                         <div class="submenu">
-                            <a href="../Star/WebSaoViet.html">Sao Việt</a>
-                            <a href="../Star/WebHoiBanThanShowbiz.html">Hội bạn thân showbiz</a>
-                            <a href="../Star/WebTVShow.html">TV Show</a>
+                            <a href="/BTL1/Star/WebSaoViet.html">Sao Việt</a>
+                            <a href="/BTL1/Star/WebHoiBanThanShowbiz.html">Hội bạn thân showbiz</a>
+                            <a href="/BTL1/Star/WebTVShow.html">TV Show</a>
                         </div>
                     </div>
                     <div class="menu-column">
