test liên kết #2

--- a/BTL1/demoBTL.html
+++ b/BTL1/demoBTL.html
@@ -63,11 +63,11 @@
                         <li><a href="./Ciné/WebCine.html">Ciné</a></li>
                         <li><a href="./Musik/WebMusik.html">Musik</a></li>
                         <li><a href="./Beauty&Fashion/WebBeautyFashion.html">Beauty & Fashion</a></li>
-                        <li><a href="/BTLWeb/BTL/DOI_SONG/DoiSong.html">Đời sống</a></li>
-                        <li><a href="/BTLWeb/BTL/MONEY-Z/Money-Z.html">Money-Z</a></li>
-                        <li><a href="/BTLWeb/BTL/AN_QUAY_DI/An.html">Ăn - Quẩy - Đi</a></li>
-                        <li><a href="/BTLWeb/BTL/XA_HOI/XaHoi.html">Xã hội</a></li>
-                        <li><a href="/BTLWeb/BTL/SUC_KHOE/SucKhoe.html">Sức khỏe</a></li>
+                        <li><a href="../BTL/DOI_SONG/DoiSong.html">Đời sống</a></li>
+                        <li><a href="../BTL/MONEY-Z/Money-Z.html">Money-Z</a></li>
+                        <li><a href="../BTL/AN_QUAY_DI/An.html">Ăn - Quẩy - Đi</a></li>
+                        <li><a href="../BTL/XA_HOI/XaHoi.html">Xã hội</a></li>
+                        <li><a href="../BTL/SUC_KHOE/SucKhoe.html">Sức khỏe</a></li>
                         <li><a href="#">Tek-life</a></li>
                         <li><a href="#">Học đường</a></li>
                         <li><a href="#">Xem Mua Luôn</a></li>
@@ -83,11 +83,11 @@
                 <div class="container">
                     <div class="menu-row">
                         <div class="menu-column">
-                            <a class="title-menu" href="/BTLWeb/BTL/DOI_SONG/DoiSong.html">Đời sống</a>
+                            <a class="title-menu" href="../BTL/DOI_SONG/DoiSong.html">Đời sống</a>
                             <div class="submenu">
-                                <a href="/BTLWeb/BTL/DOI_SONG/NhanVat.html">Nhân vật</a>
-                                <a href="/BTLWeb/BTL/DOI_SONG/XemAnChoi.html">Xem-Ăn-Chơi</a>
-                                <a href="/BTLWeb/BTL/DOI_SONG/House_n_Home.html">House n Home</a>
+                                <a href="../BTL/DOI_SONG/NhanVat.html">Nhân vật</a>
+                                <a href="../BTL/DOI_SONG/XemAnChoi.html">Xem-Ăn-Chơi</a>
+                                <a href="../BTL/DOI_SONG/House_n_Home.html">House n Home</a>
                             </div>
                         </div>
                         <div class="menu-column">
@@ -145,11 +145,11 @@
                             </div>
                         </div>
                         <div class="menu-column">
-                            <a class="title-menu" href="/BTLWeb/BTL/XA_HOI/XaHoi.html">Xã hội</a>
+                            <a class="title-menu" href="../BTL/XA_HOI/XaHoi.html">Xã hội</a>
                             <div class="submenu">
-                                <a href="/BTLWeb/BTL/XA_HOI/XaHoi.html">Pháp luật</a>
-                                <a href="/BTLWeb/BTL/XA_HOI/NongTrenMang.html">Nóng trên mạng</a>
-                                <a href="/BTLWeb/BTL/XA_HOI/SongXanh.html">Sống xanh</a>
+                                <a href="../BTL/XA_HOI/XaHoi.html">Pháp luật</a>
+                                <a href="../BTL/XA_HOI/NongTrenMang.html">Nóng trên mạng</a>
+                                <a href="../BTL/XA_HOI/SongXanh.html">Sống xanh</a>
                             </div>
                         </div>
                         <div class="menu-column">
@@ -169,14 +169,14 @@
                             </div>
                         </div>
                         <div class="menu-column">
-                            <a class="title-menu" href="/BTLWeb/BTL/SUC_KHOE/SucKhoe.html">Sức khỏe</a>
+                            <a class="title-menu" href="../BTL/SUC_KHOE/SucKhoe.html">Sức khỏe</a>
                             <div class="submenu">
-                                <a href="/BTLWeb/BTL/SUC_KHOE/SucKhoe.html">Sức khỏe</a>
-                                <a href="/BTLWeb/BTL/SUC_KHOE/TinTuc.html">Tin tức</a>
-                                <a href="/BTLWeb/BTL/SUC_KHOE/DinhDuong.html">Dinh dưỡng</a>
-                                <a href="/BTLWeb/BTL/SUC_KHOE/KhoeDep.html">Khỏe đẹp</a>
-                                <a href="/BTLWeb/BTL/SUC_KHOE/GioiTinh.html">Giới tính</a>
-                                <a href="/BTLWeb/BTL/SUC_KHOE/Cacbenh/CacBenh.html">Các bệnh</a>
+                                <a href="../BTL/SUC_KHOE/SucKhoe.html">Sức khỏe</a>
+                                <a href="../BTL/SUC_KHOE/TinTuc.html">Tin tức</a>
+                                <a href="../BTL/SUC_KHOE/DinhDuong.html">Dinh dưỡng</a>
+                                <a href="../BTL/SUC_KHOE/KhoeDep.html">Khỏe đẹp</a>
+                                <a href="../BTL/SUC_KHOE/GioiTinh.html">Giới tính</a>
+                                <a href="../BTL/SUC_KHOE/Cacbenh/CacBenh.html">Các bệnh</a>
                             </div>
                         </div>
                     </div>
@@ -851,15 +851,15 @@
                         <a href="./Musik/WebMusik.html">Musik</a> | 
                         <a href="./Beauty&Fashion/WebBeautyFashion.html">Beauty & Fashion</a> | 
                         <a href="#">Sport</a> | 
-                        <a href="/BTLWeb/BTL/DOI_SONG/DoiSong.html">Đời sống</a> | 
-                        <a href="/BTLWeb/BTL/XA_HOI/XaHoi.html">Xã hội</a> | 
-                        <a href="/BTLWeb/BTL/AN_QUAY_DI/AnQuayDi.html">Ăn - Quẩy - Đi</a> | 
+                        <a href="../BTL/DOI_SONG/DoiSong.html">Đời sống</a> | 
+                        <a href="../BTL/XA_HOI/XaHoi.html">Xã hội</a> | 
+                        <a href="../BTL/AN_QUAY_DI/AnQuayDi.html">Ăn - Quẩy - Đi</a> | 
                         <a href="#">Xem Mua Luôn</a> | 
-                        <a href="/BTLWeb/BTL/DOI_SONG/TheGioiDoDay.html">Thế giới đó đây</a> | 
-                        <a href="/BTLWeb/BTL/SUC_KHOE/SucKhoe.html">Sức khỏe</a> | 
+                        <a href="../BTL/DOI_SONG/TheGioiDoDay.html">Thế giới đó đây</a> | 
+                        <a href="../BTL/SUC_KHOE/SucKhoe.html">Sức khỏe</a> | 
                         <a href="#">Tek-Life</a> | 
                         <a href="#">Học đường</a> | 
-                        <a href="/BTLWeb/BTL/MONEY-Z/Money-Z.html">Money-Z</a> | 
+                        <a href="../BTL/MONEY-Z/Money-Z.html">Money-Z</a> | 
                         <a href="#">Video</a>
                     </div>
                     <div class="footer-max">
