gắn link cho BTL1 và0 BTL

--- a/BTL/DOI_SONG/ChumAnh.html
+++ b/BTL/DOI_SONG/ChumAnh.html
@@ -134,7 +134,7 @@
                 </div>
                 <div class="menu-row">
                     <div class="menu-column">
-                        <a class="title-menu" href="..../../BTL1/Star/WebStar.html">Star</a>
+                        <a class="title-menu" href="../../BTL1/Star/WebStar.html">Star</a>
                         <div class="submenu">
                             <a href="../../BTL1/Star/WebSaoViet.html">Sao Việt</a>
                             <a href="../../BTL1/Star/WebHoiBanThanShowbiz.html">Hội bạn thân showbiz</a>
@@ -450,7 +450,7 @@
             <hr/>
         </div>
         <div class="footer-menu">
-            <a href="#">Star</a> | <a href="#">Ciné</a> | <a href="#">Musik</a> | <a href="#">Beauty & Fashion</a> | <a href="#">Sport</a> | <a href="../DOI_SONG/DoiSong.html">Đời sống</a> | <a href="../XA_HOI/XaHoi.html">Xã hội</a> | <a href="../AN_QUAY_DI/An.html">Ăn - Quẩy - Đi</a> | <a href="#">Xem Mua Luôn</a> | <a href="../DOI_SONG/TheGioiDoDay.html">Thế giới đó đây</a> | <a href="../SUC_KHOE/SucKhoe.html">Sức khỏe</a> | <a href="#">Tek-Life</a> | <a href="#">Học đường</a> | <a href="../MONEY-Z/Money-Z.html">Money-Z</a> | <a href="#">Video</a>
+            <a href="../../BTL1/Star/WebStar.html">Star</a> | <a href="../../BTL1/Ciné/WebCine.html">Ciné</a> | <a href="../../BTL1/Musik/WebMusik.html">Musik</a> | <a href="../../BTL1/Beauty&Fashion/WebBeautyFashion.html">Beauty & Fashion</a> | <a href="#">Sport</a> | <a href="../DOI_SONG/DoiSong.html">Đời sống</a> | <a href="../XA_HOI/XaHoi.html">Xã hội</a> | <a href="../AN_QUAY_DI/An.html">Ăn - Quẩy - Đi</a> | <a href="#">Xem Mua Luôn</a> | <a href="../DOI_SONG/TheGioiDoDay.html">Thế giới đó đây</a> | <a href="../SUC_KHOE/SucKhoe.html">Sức khỏe</a> | <a href="#">Tek-Life</a> | <a href="#">Học đường</a> | <a href="../MONEY-Z/Money-Z.html">Money-Z</a> | <a href="#">Video</a>
         </div>
         <div class="footer-max">
             <div class="footer-table1">
