--- a/BTL/AN_QUAY_DI/Quay.html
+++ b/BTL/AN_QUAY_DI/Quay.html
@@ -212,7 +212,7 @@
         <hr/>
     </div>
     <div class="footer-menu">
-        <a href="#">Star</a> | <a href="#">Ciné</a> | <a href="#">Musik</a> | <a href="#">Beauty & Fashion</a> | <a href="#">Sport</a> | <a href="../DOI_SONG/DoiSong.html">Đời sống</a> | <a href="../XA_HOI/XaHoi.html">Xã hội</a> | <a href="../AN_QUAY_DI/An.html">Ăn - Quẩy - Đi</a> | <a href="#">Xem Mua Luôn</a> | <a href="../DOI_SONG/TheGioiDoDay.html">Thế giới đó đây</a> | <a href="../SUC_KHOE/SucKhoe.html">Sức khỏe</a> | <a href="#">Tek-Life</a> | <a href="#">Học đường</a> | <a href="../MONEY-Z/Money-Z.html">Money-Z</a> | <a href="#">Video</a>
+        <a href="../../BTL1/Star/WebStar.html">Star</a> | <a href="../../BTL1/Ciné/WebCine.html">Ciné</a> | <a href="../../BTL1/Musik/WebMusik.html">Musik</a> | <a href="../../BTL1/Beauty&Fashion/WebBeautyFashion.html">Beauty & Fashion</a> | <a href="#">Sport</a> | <a href="../DOI_SONG/DoiSong.html">Đời sống</a> | <a href="../XA_HOI/XaHoi.html">Xã hội</a> | <a href="../AN_QUAY_DI/An.html">Ăn - Quẩy - Đi</a> | <a href="#">Xem Mua Luôn</a> | <a href="../DOI_SONG/TheGioiDoDay.html">Thế giới đó đây</a> | <a href="../SUC_KHOE/SucKhoe.html">Sức khỏe</a> | <a href="#">Tek-Life</a> | <a href="#">Học đường</a> | <a href="../MONEY-Z/Money-Z.html">Money-Z</a> | <a href="#">Video</a>
     </div>
     <div class="footer-max">
         <div class="footer-table1">
