--- a/BTL/AN_QUAY_DI/Quay.html
+++ b/BTL/AN_QUAY_DI/Quay.html
@@ -37,7 +37,7 @@
     <div class="body">
         <div class="one">
             <section>
-                <a href="#"><img src="../images/logo_k14anquaydi.svg" width="150px"></a>
+                <a href="../../BTL1/demoBTL.html"><img src="../images/logo_k14anquaydi.svg" width="150px"></a>
             </section>
             <aside>
                 <a href="An.html"><img src="../images/logoAn.png" width="120px"></a>
